# hirschgarten

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelversion  .cache.bazelrc  .ci.bazelrc  .editorconfig  .engflow.bazelrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  BUILD  BUILD.bazel  CONTRIBUTING.md  DO_NOT_MERGE  MODULE.bazel  README.md  TODO.txt  WORKSPACE.bzlmod  api-dump.txt  bazel-a04629cd260f7740  bazel-bazel  bazel-hirschgarten-bazelquery-plugin  bazel-hirschgarten2  bazel-steward.yaml  exposed-private-api.txt  file space  jvm.bzl  ktlint-baseline.xml  macos.bazelproject  maven_install.json  package.json  plugin-content.yaml  pnpm-lock.yaml  q.query  qodana.yaml  query.bzl  versions.242.bzl  versions.243.bzl  (+8 more)
bsp-testkit2/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  non_module_deps.bzl  scala_config.bzl  scala_deps.bzl  scala_toolchain.bzl  third_party.bzl
bsp-testkit2/.github/workflows/: ci.yml  dependencies.yml
bsp-testkit2/bsp-testkit/client/: BUILD  MockClient.kt  MockClient.scala  MockServer.kt  MockServer.scala  ProtocolSuite.kt  ProtocolSuite.scala  Session.kt  Session.scala  TestClient.kt  TestClient.scala
bsp-testkit2/bsp-testkit/client/bazel/: BUILD  BazelJsonTransformer.kt  BazelTestClient.kt  BazelTestClient.scala
bsp-testkit2/bsp-testkit/utils/: BUILD  FlatMapUtils.java  FlatMapUtils.kt  GsonSealedSupport.kt  JsonComparator.kt  JsonComparator.scala
commons/src/: BUILD.bazel
plugin-bsp/: .bazelrc  .editorconfig  .gitignore  BUILD  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  benchmark.patch  build.gradle.kts  description.html  detekt-config.yml  detekt.yml  gradle.properties  maven_install.json  settings.gradle.kts  versions.bzl
plugin-bsp/.github/workflows/: build.yml
plugin-bsp/.run/: Run Plugin Verification.run.xml
plugin-bsp/.teamcity/: settings.kts
plugin-bsp/.teamcity/configurations/: baseConfiguration.kts  resultsAggregator.kts
plugin-bsp/buildSrc/: build.gradle.kts  settings.gradle.kts
plugin-bsp/docs/: migration.MD
plugin-bsp/gradle/: libs.versions.toml
plugin-bsp/jps-compilation/: build.gradle.kts
plugin-bsp/jps-compilation/src/: BUILD
plugin-bsp/libs/: BUILD
plugin-bsp/magicmetamodel/: build.gradle.kts
plugin-bsp/performance-testing/: BUILD  build.gradle.kts
plugin-bsp/probe/: build.gradle.kts
plugin-bsp/probe-setup/: build.gradle.kts
plugin-bsp/protocol/: build.gradle.kts
plugin-bsp/protocol/src/: BUILD
plugin-bsp/rules/kotlin/: junit5.bzl
plugin-bsp/src/: BUILD
plugin-bsp/test-utils/: build.gradle.kts
plugin-bsp/tools/intellij/: .managed.bazelproject
plugin-bsp/workspacemodel/: build.gradle.kts
plugin-bsp/workspacemodel/src/: BUILD
rules_intellij/: .gitignore  BUILD  MODULE.bazel  WORKSPACE.bzlmod  build-visibility.bzl  maven_install.json  projectview.bazelproject  version.bzl
rules_intellij/build_defs/: BUILD  api_version_txt.py  append_optional_xml_elements.py  build_defs.bzl  intellij_plugin.bzl  intellij_plugin_debug_target.bzl  merge_xml.py  package_meta_inf_files.py  restrictions.bzl  stamp_plugin_xml.py  zip_plugin_files.py  ~BUILD
rules_intellij/common/: BUILD
rules_intellij/common/experiments/: BUILD
rules_intellij/common/settings/: BUILD
rules_intellij/common/util/: BUILD
rules_intellij/intellij_platform_sdk/: BUILD  BUILD.android_studio223  BUILD.android_studio231  BUILD.android_studio232  BUILD.clion213  BUILD.clion221  BUILD.clion222  BUILD.clion223  BUILD.clion231  BUILD.clion232  BUILD.clion241  BUILD.clion242  BUILD.clion243  BUILD.idea213  BUILD.idea221  BUILD.idea222  BUILD.idea223  BUILD.idea232  BUILD.idea233  BUILD.idea241  BUILD.idea242  BUILD.idea243  BUILD.idea251  BUILD.idea252  BUILD.idea253  BUILD.idea261  BUILD.idea262  BUILD.ue213  BUILD.ue221  BUILD.ue222  BUILD.ue223  BUILD.ue232  BUILD.ue233  BUILD.ue241  BUILD.ue242  android_studio.bzl  build_defs.bzl
rules_intellij/testing/: BUILD  test_defs.bzl  test_defs_kt.bzl
rules_intellij/tools/: bump_sdk.py
rules_intellij/tools/build_rules/: prelude_bazel
rules_sonatype/: .gitignore  MODULE.bazel  NOTICE.txt  README.md  WORKSPACE  WORKSPACE.bzlmod  build.sbt  defs.bzl
rules_sonatype/private/rules/: BUILD  sonatype_dependencies.bzl  sonatype_java_export.bzl  sonatype_publish.bzl
server/: BUILD  BUILD.bazel  README.md
server/aspects/: core.bzl  core.bzl.template  runtime_classpath_query.bzl
server/aspects/utils/: utils.bzl  utils.bzl.template
server/bazelrunner/: BUILD
server/bspcli/: BUILD  integration_test.bzl
server/commons/: BUILD
server/e2e/: BUILD
server/example/amsterdam/: BUILD
server/example/animals/: BUILD
server/example/animals2/: generator.bzl
server/example/kotlincplugin/: User.kt  ~BUILD
server/example/krakow/: BUILD
server/example/munich/: BUILD  ~BUILD
server/executioncontext/api/: BUILD
server/executioncontext/installationcontext/: BUILD
server/executioncontext/projectview/: BUILD  README.md
server/executioncontext/workspacecontext/: BUILD
server/install/: BUILD  ~BUILD
server/libs/: BUILD
server/logger/: BUILD  ~BUILD
server/resources/aspects/: BUILD  core.bzl.template  toolchain_query.bzl
server/rules/bazel_integration_test/: defs.bzl
sonatype_kt/: .gitignore  BUILD  MODULE.bazel
sonatype_kt/private/rules/: sonatype_publish.bzl
sonatype_kt/src/resources/: log4j2.xml
tools/format/: .bazelrc  .gitignore  BUILD  MODULE.bazel  format_dummy.sh  pnpm-lock.yaml  prettier.config.cjs  use-ktlint.patch  ~BUILD
tools/stardoc-proto-reader/: .bazelrc  .gitignore  BUILD  MODULE.bazel  generate.sh  maven_install.json
tools/stardoc-proto-reader/inputs/: java_rules.binpb  kotlin_core.binpb  kotlin_jvm.proto  kotlin_repositories.doc.binpb  rules_go.binpb
tools/stardoc-proto-reader/src/: ProtobufReader.kt  Reader.kt
tools/starlark_data_generation/: .gitignore  MODULE.bazel
tools/starlark_data_generation/annotation_converter/: BUILD  get_inputs.sh  inputs
tools/starlark_data_generation/common/: BUILD  Common.kt  common.kt
tools/starlark_data_generation/stardoc-proto-reader/: BUILD
(+8508 files in other folders)
