module(
    name = "hirschgarten",
)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(
    name = "rules_kotlin",
    version = "2.3.20",
)

register_toolchains(
    "//:kotlin_toolchain",
)

# rules_kotlin depends on rules_android
bazel_dep(name = "rules_android", version = "0.7.1")

remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions",
)
use_repo(remote_android_extensions, "android_tools")

android_sdk_repository_extension = use_extension("@rules_android//rules/android_sdk_repository:rule.bzl", "android_sdk_repository_extension")
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "googleapis-java", version = "1.0.0")
bazel_dep(name = "googleapis-grpc-java", version = "1.0.0")
bazel_dep(name = "googleapis", version = "0.0.0-20250730-f6801ce4")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.20.0",
        "com.google.protobuf:protobuf-java:3.24.4",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://cache-redirector.jetbrains.com/maven-central",
    ],
)
use_repo(maven, "maven")

switched_rules = use_extension("@googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(
    grpc = True,
    java = True,
)

bazel_dep(name = "rules_apple", version = "4.3.3")

# Needed because googleapis transitively pulls in a broken version
single_version_override(
    module_name = "rules_apple",
    version = "4.3.3",
)

bazel_dep(name = "rules_shell", version = "0.6.1")

# NB: this must come BEFORE bazel_dep(name = "protobuf") because they register the from-source toolchain,
# and the first registration wins.
bazel_dep(name = "toolchains_protoc", version = "0.5.0")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    # Make sure that this version matches the version in IJ monorepo
    version = "v24.4",
)

bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_python", version = "1.8.3")

bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.37.1",
    dev_dependency = True,
)

bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "abseil-cpp", version = "20260107.0")
bazel_dep(name = "grpc-java", version = "1.78.0")
# IJ SDK

# Any SDK version

DEVKIT_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "devkit",
    jars = glob(["devkit/lib/*.jar", "devkit/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

_PYTHON_CE_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "python",
    jars = glob(["python-ce/lib/*.jar", "python-ce/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
filegroup(
  name = "python_helpers",
  srcs = glob(["python-ce/helpers/**/*"]),
  visibility = ["//visibility:public"],
)
"""

_GO_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "go",
    jars = glob(["go-plugin/lib/*.jar", "go-plugin/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

_PROTOEDIT_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "protoedit",
    jars = glob(["protoeditor/lib/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

# SDK 261

SDK_261_BASE_VERSION = "261.22158"

SDK_261_INTELLIJ_REPO_VERSION = SDK_261_BASE_VERSION + ".277"

SDK_261_INTELLIJ_VERSION = SDK_261_INTELLIJ_REPO_VERSION

SDK_261_INTELLIJ_REPOSITORY = "releases"  # releases or snapshots

SDK_261_PLUGIN_REPOSITORY_VERSION = SDK_261_BASE_VERSION + ".277"

IC_261_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIU/%s/ideaIU-%s.zip" % (SDK_261_INTELLIJ_REPOSITORY, SDK_261_INTELLIJ_VERSION, SDK_261_INTELLIJ_VERSION)

IC_261_SHA = "33f9c1c316f8fe5eaa1dd965bb929d1fcd15d757ad3d4b25028ceb5c4fbcb8fd"

http_archive(
    name = "intellij_ce_2026_1",
    build_file = "//rules_intellij/intellij_platform_sdk:BUILD.idea261",
    sha256 = IC_261_SHA,
    url = IC_261_URL,
)

IC_261_SOURCES_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIU/%s/ideaIU-%s-sources.jar" % (SDK_261_INTELLIJ_REPOSITORY, SDK_261_INTELLIJ_VERSION, SDK_261_INTELLIJ_VERSION)

IC_261_SOURCES_SHA = "56a2c511761f67eb7aa9d3d0d20ba6f7c70651655c009c5a08cbe74ed2fbec31"

http_jar(
    name = "intellij_ce_2026_1_sources",
    sha256 = IC_261_SOURCES_SHA,
    url = IC_261_SOURCES_URL,
)

DEVKIT_261_VERSION = SDK_261_BASE_VERSION + ".182"

DEVKIT_261_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/DevKit/%s/DevKit-%s.zip" % (DEVKIT_261_VERSION, DEVKIT_261_VERSION)

DEVKIT_261_SHA = "a0cae7b8ee12d8069e61cd4dd304bd9bd62212542b066142a108faf5c8b929b4"

http_archive(
    name = "devkit_2026_1",
    build_file_content = DEVKIT_BUILD_FILE,
    sha256 = DEVKIT_261_SHA,
    url = DEVKIT_261_URL,
)

PYTHON_PLUGIN_261_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/PythonCore/%s/PythonCore-%s.zip" % (SDK_261_INTELLIJ_REPO_VERSION, SDK_261_INTELLIJ_REPO_VERSION)

PYTHON_PLUGIN_261_SHA = "86a72f85df6ee621501cff8d477ae6753978e8a330462a87b4f5df1356e5f9b3"

http_archive(
    name = "python_2026_1",
    build_file_content = _PYTHON_CE_BUILD_FILE,
    sha256 = PYTHON_PLUGIN_261_SHA,
    url = PYTHON_PLUGIN_261_URL,
)

GO_PLUGIN_261_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/org.jetbrains.plugins.go/%s/org.jetbrains.plugins.go-%s.zip" % (SDK_261_PLUGIN_REPOSITORY_VERSION, SDK_261_PLUGIN_REPOSITORY_VERSION)

GO_PLUGIN_261_SHA = "321929f1a171d281e8a44602eb2ae2c2b2a10fc597f7a904fbb2505110324fd9"

http_archive(
    name = "go_2026_1",
    build_file_content = _GO_BUILD_FILE,
    sha256 = GO_PLUGIN_261_SHA,
    url = GO_PLUGIN_261_URL,
)

PERFORMANCE_PLUGIN_261_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/performanceTesting/performance-testing/%s/performance-testing-%s.jar" % (SDK_261_INTELLIJ_REPOSITORY, SDK_261_INTELLIJ_REPO_VERSION, SDK_261_INTELLIJ_REPO_VERSION)

PERFORMANCE_PLUGIN_261_SHA = "7859344f4ec9cfc57e11151beb4d8eb1481e7b3ae44a7fd1159d1efc2bd568d8"

http_jar(
    name = "performance_2026_1",
    sha256 = PERFORMANCE_PLUGIN_261_SHA,
    url = PERFORMANCE_PLUGIN_261_URL,
)

CODE_WITH_ME_261_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/platform/backend-split/%s/backend-split-%s.jar" % (SDK_261_INTELLIJ_REPOSITORY, SDK_261_INTELLIJ_REPO_VERSION, SDK_261_INTELLIJ_REPO_VERSION)

CODE_WITH_ME_261_SHA = "28ff50726669a31b5d8321541a60690b320c45378e43402dc08077de9efbd169"

http_jar(
    name = "code_with_me_2026_1",
    sha256 = CODE_WITH_ME_261_SHA,
    url = CODE_WITH_ME_261_URL,
)

CODE_WITH_ME_SPLIT_261_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/platform/split/%s/split-%s.jar" % (SDK_261_INTELLIJ_REPOSITORY, SDK_261_INTELLIJ_REPO_VERSION, SDK_261_INTELLIJ_REPO_VERSION)

CODE_WITH_ME_SPLIT_261_SHA = "4560d308951f011969257504e018e085f3dc258a79ec3015b021afd9fd86b012"

http_jar(
    name = "code_with_me_split_2026_1",
    sha256 = CODE_WITH_ME_SPLIT_261_SHA,
    url = CODE_WITH_ME_SPLIT_261_URL,
)

TERMINAL_PLUGIN_261_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/terminal/terminal/%s/terminal-%s.jar" % (SDK_261_INTELLIJ_REPOSITORY, SDK_261_INTELLIJ_REPO_VERSION, SDK_261_INTELLIJ_REPO_VERSION)

http_jar(
    name = "terminal_2026_1",
    url = TERMINAL_PLUGIN_261_URL,
)

TERMINAL_COMPLETION_PLUGIN_261_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/terminal/terminal-completion/%s/terminal-completion-%s.jar" % (SDK_261_INTELLIJ_REPOSITORY, SDK_261_INTELLIJ_REPO_VERSION, SDK_261_INTELLIJ_REPO_VERSION)

http_jar(
    name = "terminal_completion_2026_1",
    url = TERMINAL_COMPLETION_PLUGIN_261_URL,
)

PROTOEDIT_PLUGIN_261_VERSION = SDK_261_BASE_VERSION + ".185"

PROTOEDIT_PLUGIN_261_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/idea.plugin.protoeditor/%s/idea.plugin.protoeditor-%s.zip" % (PROTOEDIT_PLUGIN_261_VERSION, PROTOEDIT_PLUGIN_261_VERSION)

PROTOEDIT_PLUGIN_261_SHA = "e70b536e9feff8702ccb189068521a8ad1d63c9e0b464ddba6b60a585081935a"

http_archive(
    name = "protoedit_2026_1",
    build_file_content = _PROTOEDIT_BUILD_FILE,
    sha256 = PROTOEDIT_PLUGIN_261_SHA,
    url = PROTOEDIT_PLUGIN_261_URL,
)
