module(
    name = "rules_jvm",  # Hack: make statements like `load("@rules_jvm//:jvm.bzl", "jvm_library")` work
)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# dependency on the new aspect's sdk
bazel_dep(name = "intellij_aspect_sdk")
git_override(
    module_name = "intellij_aspect_sdk",
    commit = "03e9731a3ee98417c2825887a9343a583790fd48",
    remote = "https://github.com/JetBrains/intellij-aspect.git",
)

bazel_dep(
    name = "rules_kotlin",
    version = "2.4.0",
)

register_toolchains(
    "//:kotlin_toolchain",
)

bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "rules_python", version = "2.1.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.19.0",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://cache-redirector.jetbrains.com/maven-central",
    ],
)
use_repo(maven, "maven")

# IJ SDK

# Any SDK version

DEVKIT_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "devkit",
    jars = glob(["devkit/lib/*.jar", "devkit/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

_PYTHON_CE_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "python",
    jars = glob(["python-ce/lib/*.jar", "python-ce/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
filegroup(
  name = "python_helpers",
  srcs = glob(["python-ce/helpers/**/*"]),
  visibility = ["//visibility:public"],
)
"""

_GO_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "go",
    jars = glob(["go-plugin/lib/*.jar", "go-plugin/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

_PROTOEDIT_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "protoedit",
    jars = glob(["protoeditor/lib/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

# SDK 262

SDK_262_BASE_VERSION = "262.8377"

SDK_262_INTELLIJ_REPO_VERSION = SDK_262_BASE_VERSION + ".35"

SDK_262_INTELLIJ_VERSION = SDK_262_BASE_VERSION + ".35-EAP"

SDK_262_INTELLIJ_REPOSITORY = "snapshots"  # releases or snapshots

IC_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIU/%s/ideaIU-%s.zip" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_VERSION, SDK_262_INTELLIJ_VERSION)

IC_262_SHA = "9b47cf1c9f1ccf2d1bad78db1f622b5263c426371d5f68eb09ef022f45719495"

http_archive(
    name = "intellij_ce_2026_2",
    build_file = "//rules_intellij/intellij_platform_sdk:BUILD.idea262",
    sha256 = IC_262_SHA,
    url = IC_262_URL,
)

IC_262_SOURCES_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIU/%s/ideaIU-%s-sources.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_VERSION, SDK_262_INTELLIJ_VERSION)

IC_262_SOURCES_SHA = "41242b0f8a2c88c1b731b392be4c6fc39a7f39ed45772d26d17c6d1039069a62"

http_jar(
    name = "intellij_ce_2026_2_sources",
    sha256 = IC_262_SOURCES_SHA,
    url = IC_262_SOURCES_URL,
)

DEVKIT_262_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/DevKit/%s/DevKit-%s.zip" % (SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

DEVKIT_262_SHA = "14c85db5155e4447238de33139d6b605da3f78a1193236293f93a36ed0d9cc53"

http_archive(
    name = "devkit_2026_2",
    build_file_content = DEVKIT_BUILD_FILE,
    sha256 = DEVKIT_262_SHA,
    url = DEVKIT_262_URL,
)

PYTHON_PLUGIN_262_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/PythonCore/%s/PythonCore-%s.zip" % (SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

PYTHON_PLUGIN_262_SHA = "86db97b15282555162a7e886cfa1ba06a3e1f8f894206050052e4e26972e0e89"

http_archive(
    name = "python_2026_2",
    build_file_content = _PYTHON_CE_BUILD_FILE,
    sha256 = PYTHON_PLUGIN_262_SHA,
    url = PYTHON_PLUGIN_262_URL,
)

GO_PLUGIN_262_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/org.jetbrains.plugins.go/%s/org.jetbrains.plugins.go-%s.zip" % (SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

GO_PLUGIN_262_SHA = "a5cb0e0e3a203be59df4ceb723395a24af3660274d0831f4fb21d66fb05e4f5c"

http_archive(
    name = "go_2026_2",
    build_file_content = _GO_BUILD_FILE,
    sha256 = GO_PLUGIN_262_SHA,
    url = GO_PLUGIN_262_URL,
)

PERFORMANCE_PLUGIN_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/performanceTesting/performance-testing/%s/performance-testing-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

PERFORMANCE_PLUGIN_262_SHA = "000bb699fa3f950a6ae68096b87ae8eb5f58bb2e7001973e8424da87ddf1fd6c"

http_jar(
    name = "performance_2026_2",
    sha256 = PERFORMANCE_PLUGIN_262_SHA,
    url = PERFORMANCE_PLUGIN_262_URL,
)

CODE_WITH_ME_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/platform/backend-split/%s/backend-split-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

CODE_WITH_ME_262_SHA = "f71a10eb40063e37bbd4fa2cd6595b6a521b6a3ccd2d32c428c5b5b7c4b91cd0"

http_jar(
    name = "code_with_me_2026_2",
    sha256 = CODE_WITH_ME_262_SHA,
    url = CODE_WITH_ME_262_URL,
)

CODE_WITH_ME_SPLIT_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/platform/split/%s/split-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

CODE_WITH_ME_SPLIT_262_SHA = "2fe2cd0c2d35bf9573195769b6a319e06fe4fb8a6e1d6d510d4a4f8074bc905d"

http_jar(
    name = "code_with_me_split_2026_2",
    sha256 = CODE_WITH_ME_SPLIT_262_SHA,
    url = CODE_WITH_ME_SPLIT_262_URL,
)

TERMINAL_PLUGIN_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/terminal/terminal/%s/terminal-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

TERMINAL_PLUGIN_262_SHA = "8097066fcc6dc06c4f6456fb3f6cedb3d1ddec9c6ae1eca9644246720f64486f"

http_jar(
    name = "terminal_2026_2",
    sha256 = TERMINAL_PLUGIN_262_SHA,
    url = TERMINAL_PLUGIN_262_URL,
)

TERMINAL_COMPLETION_PLUGIN_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/terminal/terminal-completion/%s/terminal-completion-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

TERMINAL_COMPLETION_PLUGIN_262_SHA = "4d80fe3d269b60b5aa0d8981d54fefef1a4a10b7c17c0e0d0898199c8abf3c37"

http_jar(
    name = "terminal_completion_2026_2",
    sha256 = TERMINAL_COMPLETION_PLUGIN_262_SHA,
    url = TERMINAL_COMPLETION_PLUGIN_262_URL,
)

PROTOEDIT_PLUGIN_262_VERSION = SDK_262_BASE_VERSION + ".40"

PROTOEDIT_PLUGIN_262_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/idea.plugin.protoeditor/%s/idea.plugin.protoeditor-%s.zip" % (PROTOEDIT_PLUGIN_262_VERSION, PROTOEDIT_PLUGIN_262_VERSION)

PROTOEDIT_PLUGIN_262_SHA = "f9ebb1a662b6471f42c8c815237de310605cfbb08f54f2c2166652e914ac2a11"

http_archive(
    name = "protoedit_2026_2",
    build_file_content = _PROTOEDIT_BUILD_FILE,
    sha256 = PROTOEDIT_PLUGIN_262_SHA,
    url = PROTOEDIT_PLUGIN_262_URL,
)

JAVA_COVERAGE_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/java/java-coverage/%s/java-coverage-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

JAVA_COVERAGE_262_SHA = "65910bfec1d826de871e7e359db49f660b745632c665cada86b2092963af1d0f"

http_jar(
    name = "java_coverage_2026_2",
    sha256 = JAVA_COVERAGE_262_SHA,
    url = JAVA_COVERAGE_262_URL,
)
