module(
    name = "rules_jvm",  # Hack: make statements like `load("@rules_jvm//:jvm.bzl", "jvm_library")` work
)

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# dependency on the new aspect's sdk
bazel_dep(name = "intellij_aspect_sdk")
git_override(
    module_name = "intellij_aspect_sdk",
    commit = "a1a637173b09c563d154c9083d72ae24f93276d9",
    remote = "https://github.com/JetBrains/intellij-aspect.git",
)

bazel_dep(
    name = "rules_kotlin",
    version = "2.4.0",
)

register_toolchains(
    "//:kotlin_toolchain",
)

bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "rules_python", version = "2.1.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.19.0",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://cache-redirector.jetbrains.com/maven-central",
    ],
)
use_repo(maven, "maven")

# IJ SDK

# Any SDK version

DEVKIT_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "devkit",
    jars = glob(["devkit/lib/*.jar", "devkit/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

_PYTHON_CE_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "python",
    jars = glob(["python-ce/lib/*.jar", "python-ce/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
filegroup(
  name = "python_helpers",
  srcs = glob(["python-ce/helpers/**/*"]),
  visibility = ["//visibility:public"],
)
"""

_GO_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "go",
    jars = glob(["go-plugin/lib/*.jar", "go-plugin/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

_PROTOEDIT_BUILD_FILE = """
load("@rules_java//java:java_import.bzl", "java_import")

java_import(
    name = "protoedit",
    jars = glob(["protoeditor/lib/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

# SDK 262

SDK_262_BASE_VERSION = "262.8665"

SDK_262_INTELLIJ_REPO_VERSION = SDK_262_BASE_VERSION + ".258"

SDK_262_INTELLIJ_VERSION = SDK_262_BASE_VERSION + ".258"

SDK_262_INTELLIJ_REPOSITORY = "releases"  # releases or snapshots

IC_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIU/%s/ideaIU-%s.zip" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_VERSION, SDK_262_INTELLIJ_VERSION)

IC_262_SHA = "af239a432cde8f54e5ca3f02b34adcd35367a1235126d85fb169fd18a300f385"

http_archive(
    name = "intellij_ce_2026_2",
    build_file = "//rules_intellij/intellij_platform_sdk:BUILD.idea262",
    sha256 = IC_262_SHA,
    url = IC_262_URL,
)

IC_262_SOURCES_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIU/%s/ideaIU-%s-sources.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_VERSION, SDK_262_INTELLIJ_VERSION)

IC_262_SOURCES_SHA = "2ab7bbe36741062d0da9d0824044b78952e3b4a04ad6923c23e9aef9e97582a7"

http_jar(
    name = "intellij_ce_2026_2_sources",
    sha256 = IC_262_SOURCES_SHA,
    url = IC_262_SOURCES_URL,
)

DEVKIT_262_VERSION = SDK_262_BASE_VERSION + ".176"

DEVKIT_262_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/DevKit/%s/DevKit-%s.zip" % (DEVKIT_262_VERSION, DEVKIT_262_VERSION)

DEVKIT_262_SHA = "09dd22e106f01910a2524aedda3127bcd4dbcc82a4e26d36b4c687485656ed77"

http_archive(
    name = "devkit_2026_2",
    build_file_content = DEVKIT_BUILD_FILE,
    sha256 = DEVKIT_262_SHA,
    url = DEVKIT_262_URL,
)

PYTHON_PLUGIN_262_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/PythonCore/%s/PythonCore-%s.zip" % (SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

PYTHON_PLUGIN_262_SHA = "44fca95b2104c40e2609bf7724be3816a62a4727a0090278a3330b0025dbe1f0"

http_archive(
    name = "python_2026_2",
    build_file_content = _PYTHON_CE_BUILD_FILE,
    sha256 = PYTHON_PLUGIN_262_SHA,
    url = PYTHON_PLUGIN_262_URL,
)

GO_PLUGIN_262_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/org.jetbrains.plugins.go/%s/org.jetbrains.plugins.go-%s.zip" % (SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

GO_PLUGIN_262_SHA = "04def39162e5716241d5a2d18917fe8cca05def84e2749cee11e59bd46b5565a"

http_archive(
    name = "go_2026_2",
    build_file_content = _GO_BUILD_FILE,
    sha256 = GO_PLUGIN_262_SHA,
    url = GO_PLUGIN_262_URL,
)

PERFORMANCE_PLUGIN_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/performanceTesting/performance-testing/%s/performance-testing-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

PERFORMANCE_PLUGIN_262_SHA = "d9971e65ba8650a7fd30cbebfb8bbdc910d1d63541e5c59650dcc9f19fc6e6f3"

http_jar(
    name = "performance_2026_2",
    sha256 = PERFORMANCE_PLUGIN_262_SHA,
    url = PERFORMANCE_PLUGIN_262_URL,
)

CODE_WITH_ME_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/platform/backend-split/%s/backend-split-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

CODE_WITH_ME_262_SHA = "27c3f3b31165ee0504fb973736a694e100d1a3868f16990294d8ac4e7989cfd5"

http_jar(
    name = "code_with_me_2026_2",
    sha256 = CODE_WITH_ME_262_SHA,
    url = CODE_WITH_ME_262_URL,
)

CODE_WITH_ME_SPLIT_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/platform/split/%s/split-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

CODE_WITH_ME_SPLIT_262_SHA = "08e30674749a5ede945289df64cce4b9cc7c2735540678023d5c6460b2a69042"

http_jar(
    name = "code_with_me_split_2026_2",
    sha256 = CODE_WITH_ME_SPLIT_262_SHA,
    url = CODE_WITH_ME_SPLIT_262_URL,
)

TERMINAL_PLUGIN_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/terminal/terminal/%s/terminal-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

TERMINAL_PLUGIN_262_SHA = "2bfc3ba33b60748b4fabd2eada607c59c7aef411c0403d396dd7cd7914762a64"

http_jar(
    name = "terminal_2026_2",
    sha256 = TERMINAL_PLUGIN_262_SHA,
    url = TERMINAL_PLUGIN_262_URL,
)

TERMINAL_COMPLETION_PLUGIN_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/terminal/terminal-completion/%s/terminal-completion-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

TERMINAL_COMPLETION_PLUGIN_262_SHA = "4d80fe3d269b60b5aa0d8981d54fefef1a4a10b7c17c0e0d0898199c8abf3c37"

http_jar(
    name = "terminal_completion_2026_2",
    sha256 = TERMINAL_COMPLETION_PLUGIN_262_SHA,
    url = TERMINAL_COMPLETION_PLUGIN_262_URL,
)

PROTOEDIT_PLUGIN_262_VERSION = SDK_262_BASE_VERSION + ".173"

PROTOEDIT_PLUGIN_262_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/idea.plugin.protoeditor/%s/idea.plugin.protoeditor-%s.zip" % (PROTOEDIT_PLUGIN_262_VERSION, PROTOEDIT_PLUGIN_262_VERSION)

PROTOEDIT_PLUGIN_262_SHA = "6854cf2e786c3a6ba62e4cc0ee3a45ef5891dd88944bcdba81178e1e29b4edf6"

http_archive(
    name = "protoedit_2026_2",
    build_file_content = _PROTOEDIT_BUILD_FILE,
    sha256 = PROTOEDIT_PLUGIN_262_SHA,
    url = PROTOEDIT_PLUGIN_262_URL,
)

JAVA_COVERAGE_262_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/java/java-coverage/%s/java-coverage-%s.jar" % (SDK_262_INTELLIJ_REPOSITORY, SDK_262_INTELLIJ_REPO_VERSION, SDK_262_INTELLIJ_REPO_VERSION)

JAVA_COVERAGE_262_SHA = "970511ef980920d4ed0bb7c4ed50f36d9d284688cf89212d1a1dcbcf4bfe3b39"

http_jar(
    name = "java_coverage_2026_2",
    sha256 = JAVA_COVERAGE_262_SHA,
    url = JAVA_COVERAGE_262_URL,
)
