module(name = "bsp-testkit2", version = "")

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_java", version = "7.0.6")
bazel_dep(name = "rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name="platforms", version="0.0.7")

# Required until there's a new release
git_override(
    module_name = "rules_jvm_external",
    remote = "https://github.com/bazelbuild/rules_jvm_external.git",
    commit = "679348a8da17a9f3954fb2cab10a95d5a5848c85",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "com.google.code.gson:gson:2.10.1",
        "com.google.guava:guava:31.0.1-jre",
        "ch.epfl.scala:bsp4j:2.1.0-M7",
        "org.junit.jupiter:junit-jupiter:5.10.1",
        "org.scala-lang:scala-library:2.13.12"
    ],
    fetch_sources = True,
    repositories = [
        "https://maven.google.com",
        "https://repo.maven.apache.org/maven2",
    ],
)

use_repo(
    maven,
    "maven",
)

# Required until rules_scala is bzlmodded
rules_scala = use_extension("//:non_module_deps.bzl", "rules_scala")
use_repo(
    rules_scala,
    "io_bazel_rules_scala",

)

scala_config = use_extension("//:scala_config.bzl", "scala_config")
use_repo(
    scala_config,
    "io_bazel_rules_scala_config",
)

scala_deps = use_extension("//:scala_deps.bzl", "scala_deps")
use_repo(
    scala_deps,
    "io_bazel_rules_scala_scala_parser_combinators",
    "io_bazel_rules_scala_scala_compiler",
    "io_bazel_rules_scala_scala_xml",
    "io_bazel_rules_scala_scala_library",
    "io_bazel_rules_scala_scala_reflect",
)

scala_toolchain = use_extension("//:scala_toolchain.bzl", "scala_toolchain")
register_toolchains(
    "@io_bazel_rules_scala//scala:default_toolchain",
)