module(name = "bsp-testkit2", version = "")

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_java", version = "7.0.6")
bazel_dep(name = "rules_kotlin", version = "1.9.0")
bazel_dep(name = "rules_jvm_external", version = "5.3")

# Required until there's a new release
git_override(
    module_name = "rules_jvm_external",
    remote = "https://github.com/bazelbuild/rules_jvm_external.git",
    commit = "679348a8da17a9f3954fb2cab10a95d5a5848c85",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "com.google.code.gson:gson:2.10.1",
        "com.google.guava:guava:31.0.1-jre",
        "ch.epfl.scala:bsp4j:2.1.0-M7",
        "org.junit.jupiter:junit-jupiter:5.10.1",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3",
        "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3",
    ],
    fetch_sources = True,
    repositories = [
        "https://maven.google.com",
        "https://repo.maven.apache.org/maven2",
    ],
)

use_repo(
    maven,
    "maven",
)
